Fix bug for test and RefreshToken
